# advent-of-code-2020-rust

./: .gitignore  Cargo.toml
.aocf/: config  cookie
.aocf/cache/: aoc2015_1.json  aoc2020_1.json  aoc2020_2.json  aoc2020_2020.json  aoc2020_3.json  aoc2020_4.json  aoc2020_5.json  aoc2020_6.json  aoc2020_7.json  aoc2020_8.json
src/: day1part1.rs  day1part2.rs  day2part1.rs  day2part2.rs  day3part1.rs  day3part2.rs  day4part1.rs  day4part2.rs  day5part1.rs  day5part2.rs  day6part1.rs  day6part2.rs  day7part1.rs  day7part2.rs  day8part1.rs  day8part2.rs  day9part1.rs  day9part2.rs  main.rs
