[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["sashinexists <myself@sashinexists.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocf = "0.1.8"
regex = "1"

[[bin]]
name="advent-of-code-2020"
path="src/main.rs"
